fix stretch bug again

--- a/assets/sass/components/_image.scss
+++ b/assets/sass/components/_image.scss
@@ -160,7 +160,7 @@
     img {
       //@include vendor('object-fit', 'cover');
       //@include vendor('object-position', 'center');
-      height: 100%;
+      //   height: auto;
       left: 0;
       position: absolute;
       top: 0;
